build(testbed): Testbed in Gradle integrieren
added new task readKubeConfig
uses its own known_hosts file

issue: #62